--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -3,4 +3,5 @@
 .page {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   background-color: #000;
+  display: flex;
 }
